<resources>
    <string name="app_name">物流管理</string>
    <string name="action_settings">Settings</string>
    <string name="send_date">发货时间</string>
    <string name="No">货号</string>
    <string name="branch">网点</string>
    <string name="receiver_num">收货人电话</string>
    <string name="receiver">收货人</string>
    <string name="shipper">发货人</string>
    <string name="shipper_num">发货人电话</string>
    <string name="shipper_ID">发货人ID</string>
    <string name="outward">外转</string>
    <string name="product_name">品名</string>
    <string name="count">件数</string>
    <string name="packing">包装</string>
    <string name="insurance">保价</string>
    <string name="prepay">现付</string>
    <string name="afterpay">提付</string>
    <string name="unrecev">代收款</string>
    <string name="authors">受理人</string>
    <string name="remark">备注</string>
    <string name="commit">提交订单</string>

    <string name="hello_world">Hello world!</string>
    <string name="bluetooth">bluetooth</string>
    <string name="usb">USB</string>
    <string name="ethernet">ethernet</string>
    <string name="print_mode">Print mode</string>
    <string name="tsc">Label</string>
    <string name="esc">Receipt</string>
    <string name="print_text">Print text</string>
    <string name="print_image">Print bitmap</string>
    <string name="print_1d_barcode">Print 1D barcode</string>
    <string name="open">Open port</string>
    <string name="close">Close port</string>
    <string name="receive">Received data</string>
    <string name="query">Query status</string>
    <string name="init_port_info">Port:undefined Addr:undefined</string>
    <string name="port">Port:</string>
    <string name="ok">OK</string>
    <string name="address">Addr:</string>
    <string name="port_parameters_wrong">Invalid parameters！</string>
    <string name="port_parameters_is_not_save">Port parameters is not saved！</string>
    <string name="gprinter001">Printer 001</string>
    <string name="gprinter002">Printer 002</string>
    <string name="gprinter003">Printer 003</string>
    <string name="gprinter004">Printer 004</string>
    <string name="gprinter005">Printer 005</string>
    <string name="disconnect">disconnect</string>
    <string name="cut">disconn</string>
    <string name="cutting">disconnecting</string>
    <string name="connect">connect</string>
    <string name="connected">connected</string>
    <string name="connecting">connecting</string>
    <string name="port_configuration">Port configuration</string>
    <string name ="bluetooth_is_not_enabled">bluetooth is not enabled</string>
    <string name = "title_paired_devices">Paired</string>
    <string name ="title_other_devices">New</string>
    <string name ="scan">Scan</string>
    <string name ="bluetooth_device_list">Bluetooth device list</string>
    <string name ="select_bluetooth_device">select bluetooth device</string>
    <string name ="none_bluetooth_device_found">none bluetooth device found</string>
    <string name ="none_paired">none paired</string>
    <string name ="refresh_bluetooth_list">refresh bluetooth list</string>
    <string name ="scaning">scaning</string>
    <string name ="usb_info">usb information</string>
    <string name ="refresh_usb_device">refresh usb devices</string>
    <string name ="ip_address">ip:</string>
    <string name ="default_ip_address">192.168.123.100</string>
    <string name ="port_number">port:</string>
    <string name ="default_port_number">9100</string>
    <string name ="bluetooth_address">bluetooth addr： </string>
    <string name ="usb_address">USB： </string>
    <string name ="usb_devices_list">USB devices list</string>
    <string name ="none_usb_device">none usb device connected</string>
    <string name="current_version">current version</string>
    <string name="find_new_version">Found new version</string>
    <string name="whether_or_not_to_update">Update app？</string>
    <string name="app_update">App update</string>
    <string name="update">update</string>
    <string name="not_update">ignore</string>
    <string name="downloading">Downloading</string>
    <string name="please_wait">please waiting</string>
    <string name="download_complated">downloaded</string>
    <string name="whether_or_not_setup_new_app">Setup new app?</string>
    <string name="loading">Loading。。。</string>
    <string name="cancel">Cancel</string>
    <string name="copy_right_en">COPYRIGHT@2014 GPRINTER ALL RIGHTS RESERVERD</string>
    <string name="copy_right_cn">佳博集团 版权所有</string>
</resources>
